# constrained_node_allocation_balancer

./: .gitignore  404.html  README.md  demo.py  index.html  mkdocs.yml  pyproject.toml
algorithm/: index.html
docs/: algorithm.md  examples.md  fair_internet_bandwidth_problem.md  fair_power_curtailment_problem.md  getting_started.md  index.md  logo.drawio
docs/full_worked_examples/: allocating_to_leaves.md  allocating_to_leaves_in_proportion_to_n_leaves_at_or_below.md  allocating_to_leaves_when_adjusting_inactive_limit_is_necessary.md  allocating_to_leaves_when_adjusting_inactive_limits_is_necessary.md  allocating_to_leaves_when_redistribution_is_necessary.md  allocating_to_leaves_when_redistribution_is_necessary_2.md  allocating_to_leaves_without_limiting_parent.md  allocating_to_leaves_without_limits.md  reallocating_to_leaves_in_proportion_to_n_leaves_at_or_below.md
examples/: index.html
fair_internet_bandwidth_problem/: index.html
fair_power_curtailment_problem/: index.html
full_worked_examples/allocating_to_leaves/: index.html
full_worked_examples/allocating_to_leaves_in_proportion_to_n_leaves_at_or_below/: index.html
full_worked_examples/allocating_to_leaves_when_adjusting_inactive_limit_is_necessary/: index.html
full_worked_examples/allocating_to_leaves_when_adjusting_inactive_limits_is_necessary/: index.html
getting_started/: index.html
search/: search_index.json
src/: ascii_barplot.py  constrained_node_allocation_balancer.py  limits.py  logs.py  node.py  utils.py
tests/: test_ascii_barplot.py  test_constrained_node_allocation_balancer.py
(+5 files in other folders)
