[project]
name = "constrained_node_allocation_balancer"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = ["pytest (>=8.3.5,<9.0.0)", "python-to-mermaid (>=0.6.0,<0.7.0)"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = ["-s"]


[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "DTZ", "RUF", "PERF"]
ignore = [
    "E501", # Line too long.
]
